--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,12 +9,11 @@
 
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-
-    <!-- Permissions required by GoogleAuthUtil -->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" /> <!-- Permissions required by GoogleAuthUtil -->
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.MANAGE_ACCOUNTS" />
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -23,13 +22,19 @@
         android:screenOrientation="portrait"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat">
+        <provider
+            android:name=".MyContentProvider"
+            android:authorities="com.myapp.SafeCamera"
+            android:enabled="true"
+            android:exported="true"></provider>
+
         <activity
-            android:name="com.myapp.SafeCamera.SettingsActivity"
+            android:name=".SettingsActivity"
             android:exported="true"
             android:label="Ajustes"
-            android:parentActivityName="com.myapp.SafeCamera.MainActivity"/>
+            android:parentActivityName=".MainActivity" />
         <activity
-            android:name="com.myapp.SafeCamera.MainActivity"
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
